# SwitchboardController

./: .gitignore  CMakeLists.txt
arduino/multiknob/: multiknob.ino
arduino/switches/: switches.ino
include/: AudioManager.h  SerialPort.h  Spotify.h  Switchboard.h  Utils.h  VolumeWorker.h
src/: AudioManager.cpp  SerialPort.cpp  Switchboard.cpp  Utils.cpp  VolumeWorker.cpp  main.cpp  spotify.cpp
systemd/: InoSwitchboardController.service
